<?xml version="1.0"?>
<package format="3">
	<name>can_serial</name>
	<version>0.0.0</version>
	<description>CAN serial communication node for autoaim system</description>
	<maintainer email="zllc@todo.todo">zllc</maintainer>
	<license>Apache-2.0</license>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>rclcpp</depend>
	<depend>rclcpp_components</depend>
	<depend>autoaim_interfaces</depend>
	<depend>boost</depend>
	<depend>std_msgs</depend>
	
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
