<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mosas_bringup</name>
  <version>0.0.1</version>
  <description>Launch files and configurations for mosas autoaim system</description>
  <maintainer email="zllc@todo.todo">zllc</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>autoaim_interfaces</exec_depend>
  <exec_depend>can_serial</exec_depend>
  <exec_depend>detect_base</exec_depend>
  <exec_depend>hik_publisher</exec_depend>
  <exec_depend>save_frame</exec_depend>
  <exec_depend>system_monitor</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
