<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>save_frame</name>
  <version>0.0.1</version>
  <description>Frame recording node for mosas autoaim system</description>
  <maintainer email="zllc@todo.todo">zllc</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_compression</depend>
  <depend>rosbag2_compression_zstd</depend>
  <depend>rosbag2_storage</depend>
  <depend>std_msgs</depend>
  <depend>autoaim_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
